hydroflow/tests/compile-fail/surface_loop_source.stderr
warning: `loop` blocks are not yet supported.
 --> tests/compile-fail/surface_loop_source.rs:3:9
  |
3 |         loop {
  |         ^^^^

error: Source operator `source_iter(...)` must be at the root level, not within any `loop { ... }` contexts.
 --> tests/compile-fail/surface_loop_source.rs:4:13
  |
4 |             source_iter(0..10) -> null();
  |             ^^^^^^^^^^^^^^^^^^
